--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -3,3 +3,15 @@ html,body, #App {
   margin: 0;
   padding: 0;
 }
+.el-breadcrumb{
+  margin-bottom: 15px;
+  font-size: 12px;
+}
+.el-table{
+  margin-top: 15px;
+  font-size: 12px;
+}
+.el-pagination{
+  
+  margin: 15px;
+}
