--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -16,3 +16,12 @@ html,body, #App {
   
   margin: 15px;
 }
+.el-steps {
+  margin: 15px 0;
+}
+.el-step__title {
+  font-size: 13px;
+}
+.ql-editor {
+  min-height: 300px;
+}
